# openCvKotlin

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/leyline/computervision/: MainActivity.kt  NativeClass.kt
app/src/main/res/layout/: activity_open_cv.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
opencv450/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
sdk/: build.gradle
